--- a/home.css
+++ b/home.css
@@ -2,5 +2,26 @@ body {
     background-color: black;
     --primary-color: rgba(162, 155, 254);
     --secondary-color : rgba(152,146,239,255);
-    --font :var(--font)
+    --font :var(--font);
+    color : white;
+}
+
+.home__title {
+    color : white;
+}
+
+.header__home {
+   position: relative;
+  height: 100vh;
+  overflow: hidden;
+  
+}
+.header__title-img {
+    position: flex;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin: 10%;
+    
+  
 }
